--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "eazel",
+  "name": "hotcake",
   "version": "1.0.0",
   "description": "Bring easy auto reload to your web project right away.",
   "main": "index.js",
-  "repository": "git@github.com:Xvezda/eazel.git",
+  "repository": "git@github.com:Xvezda/hotcake.git",
   "author": "Xvezda <xvezda@naver.com>",
   "license": "MIT",
   "private": true,
