--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hotcake",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "Bring easy auto reload to your web project right away.",
   "main": "hotcake.js",
   "repository": "git@github.com:Xvezda/hotcake.git",
@@ -9,9 +9,11 @@
   "private": true,
   "scripts": {
     "start": "http-server -c-1 .",
-    "test": "semistandard"
+    "test": "semistandard",
+    "deploy": "gh-pages -d demo"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "http-server": "^0.12.3",
     "semistandard": "^14.2.3"
   }
