--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hotcake",
   "version": "0.0.1",
   "description": "Bring simple auto reload to your web project right away.",
-  "main": "hotcake.js",
+  "main": "hotcake.min.js",
   "repository": "git@github.com:Xvezda/hotcake.git",
   "author": "Xvezda <xvezda@naver.com>",
   "keywords": [
