--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "terser -o hotcake.min.js hotcake.js",
     "test": "semistandard",
     "deploy": "gh-pages -d demo",
-    "prepublish": "yarn build"
+    "prepublish": "yarn test && yarn build"
   },
   "devDependencies": {
     "gh-pages": "^3.1.0",
