--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "license": "MIT",
   "scripts": {
-    "start": "http-server -c-1 .",
+    "start": "serve",
     "build": "terser -c -m -o hotcake.min.js hotcake.js",
     "test": "semistandard",
     "deploy": "gh-pages -d demo",
@@ -22,6 +22,7 @@
   "devDependencies": {
     "gh-pages": "^3.1.0",
     "semistandard": "^14.2.3",
+    "serve": "^11.3.2",
     "terser": "^5.2.1"
   }
 }
